wacc/test/golden/semanticErr.while.falsErr
# false typo

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  while fals do
    skip
  done
end


Semantic error in test/wacc_examples/invalid/semanticErr/while/falsErr.wacc (line 12, column 9):
Variable "fals" was not declared.
> begin
>   while fals do
>         ^^^^
>     skip

